# aws-tui

./: Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs  ssm_setting.rs
