[package]
name = "aws-tui"
version = "0.1.0"
authors = ["music-brain88 <music.brain88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.12", default-features = false, features = ['crossterm']  }
termion = "1.5.5"
crossterm = "0.18.2"
cursive = "0.15.0"
